# resilipipe_quality_scoring

./: Dockerfile  Makefile  README.md
resilipipe/: pyproject.toml
resilipipe/resilipipe/: __init__.py
resilipipe/resilipipe/conf/: config.py  modules.yaml
resilipipe/resilipipe/jobs/: spark.py
resilipipe/resilipipe/log/: README.md  info_logging.py  statistics.py
resilipipe/resilipipe/parse/: README.md  language.py  parse_single_warc.py  prepare_modules.py  warc_preprocessing.py
resilipipe/resilipipe/parse/modules/: abstract.py  collection_indices.py  curlielabels.py  geoparsing.py  links.py  quality_scoring.py
scripts/: prepare.sh  run_preprocessor.sh
tests/: __init__.py  pytest.ini
tests/data/: metadata.parquet
tests/jobs/: test_spark.py
tests/parse/: test_warc_preprocessing.py
